--- a/app/src/main/res/layout/carousel.xml
+++ b/app/src/main/res/layout/carousel.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
+<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_height="match_parent"
-              android:orientation="vertical">
-
+              android:layout_width="match_parent">
     <com.yxy.zlp.dailyzh.customView.Carousel
         android:id="@+id/carousel"
         android:layout_width="match_parent"
         android:layout_height="200dp" />
+</FrameLayout>
 
-</LinearLayout>
+
+
