--- a/app/src/main/res/layout/drawer_item_list.xml
+++ b/app/src/main/res/layout/drawer_item_list.xml
@@ -6,7 +6,7 @@
               android:orientation="vertical">
 
     <LinearLayout
-        android:id="@+id/drawer_layout"
+        android:id="@+id/drawer_header_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/holo_blue_dark"
