--- a/app/src/main/res/layout/theme_news_item.xml
+++ b/app/src/main/res/layout/theme_news_item.xml
@@ -14,6 +14,14 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/main_selector"
         android:orientation="horizontal">
+        <TextView
+            android:id="@+id/theme_topic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:textColor="@color/news_topic"
+            android:textSize="13sp"
+            android:visibility="gone" />
 
         <RelativeLayout
             android:layout_width="match_parent"
